--- a/app/src/main/res/drawable/border_text.xml
+++ b/app/src/main/res/drawable/border_text.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+    <stroke
+        android:width="2dp"
+        android:color="#004d4d" />
 
-</selector>
+    <gradient
+        android:angle="225"
+        android:startColor="#ffffff"
+        android:endColor="#ffffff"/>
+
+    <corners
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
+</shape>
