--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,22 +6,33 @@
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
-
+<LinearLayout
+    android:id="@+id/topLbl"
+    android:orientation="vertical"
+    android:gravity="center"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintBottom_toTopOf="@id/layoutLogin"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+ <TextView
+     android:textSize="50dp"
+      android:textStyle="bold"
+     android:text="Dsport Team"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"></TextView>
   <ImageView
       android:id="@+id/logo"
-       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-       app:layout_constraintBottom_toTopOf="@id/layoutLogin"
       android:layout_width="200dp"
       android:layout_height="200dp"
-      android:src="@drawable/icon_app" />
-
+      android:src="@drawable/logo_app" />
+</LinearLayout>
  <RelativeLayout
      android:id="@+id/layoutLogin"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
-     app:layout_constraintTop_toBottomOf="@+id/logo"
+  app:layout_constraintTop_toBottomOf="@+id/topLbl"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
