--- a/app/src/main/res/layout/fragment_list_evaluate.xml
+++ b/app/src/main/res/layout/fragment_list_evaluate.xml
@@ -13,29 +13,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
+
         android:orientation="vertical">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/toolbar_color"
+            app:layout_constraintTop_toTopOf="parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-                <Button
-                    android:layout_gravity="center"
-                    android:paddingRight="20dp"
-                    android:paddingLeft="20dp"
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="Danh sách đánh giá"
                     android:textColor="@color/white"
-                    android:background="@drawable/shape"
-                    android:id="@+id/btnComment"
-                    android:text="Viết đánh giá"
-                    android:textAllCaps="false"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"></Button>
-             <TextView
-                 android:padding="10dp"
-                 android:textSize="20dp"
-                 android:text="Danh sách đánh giá"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"></TextView>
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+            <LinearLayout
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintBottom_toTopOf="@+id/btnComment"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical">
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycleViewListCommentVertical"
                     android:layout_width="match_parent"
@@ -43,7 +51,21 @@
                   />
             </LinearLayout>
 
+        <Button
 
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_gravity="center"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:textColor="@color/white"
+            android:background="@drawable/shape"
+            android:id="@+id/btnComment"
+            android:text="Viết đánh giá"
+            android:textAllCaps="false"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"></Button>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
