--- a/app/src/main/res/layout/fragment_list_player.xml
+++ b/app/src/main/res/layout/fragment_list_player.xml
@@ -26,7 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Danh sách khung giờ còn trống"
+                    android:text="Danh sách cầu thủ"
                     android:textSize="20dp"
                     android:textColor="@color/white"/>
 
@@ -45,7 +45,7 @@
                 android:gravity="center"
                 android:orientation="vertical">
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycleViewListTimeVertical"
+                    android:id="@+id/recycleViewListPlayerVertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
                 <!--                    android:adapter="@{viewModel.adapter}"-->
