--- a/app/src/main/res/layout/fragment_list_queue_team.xml
+++ b/app/src/main/res/layout/fragment_list_queue_team.xml
@@ -40,7 +40,7 @@
                     android:background="@drawable/shape"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
-                    android:text="Join Game"
+                    android:text="Tham gia trận đấu"
                     android:textColor="@color/white" />
 
             </LinearLayout>
