--- a/app/src/main/res/layout/fragment_profile_field.xml
+++ b/app/src/main/res/layout/fragment_profile_field.xml
@@ -1,73 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="team"
             type="com.example.myclub.model.Field" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:orientation="vertical"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:background="@drawable/toolbar_color"
             android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/toolbar_color"
             app:layout_constraintTop_toTopOf="parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <TextView
                     android:id="@+id/title"
-                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:textSize="20dp"
                     android:text="Hồ sơ sân bóng"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    android:textSize="20dp" />
+
                 <ImageButton
                     android:id="@+id/btnCall"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:paddingHorizontal="15dp"
                     android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/ic_baseline_phone_24_green"/>
+                    android:paddingHorizontal="15dp"
+                    android:src="@drawable/ic_baseline_phone_24_green" />
+
                 <ImageButton
                     android:id="@+id/btnEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:paddingHorizontal="15dp"
                     android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/email_icon"/>
+                    android:paddingHorizontal="15dp"
+                    android:src="@drawable/email_icon" />
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
+
         <ScrollView
-            android:paddingTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
+
             <LinearLayout
                 android:id="@+id/mainView"
-                android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
                 <androidx.cardview.widget.CardView
-                    app:layout_constraintTop_toTopOf="parent"
                     android:id="@+id/previewInfor"
-                    android:layout_width ="match_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    app:cardCornerRadius="20dp">
+                    app:cardCornerRadius="20dp"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/inforReview"
@@ -78,8 +85,8 @@
                             android:id="@+id/cover"
                             android:layout_width="match_parent"
                             android:layout_height="160dp"
-                            android:src="@drawable/cover_default"
                             android:scaleType="fitXY"
+                            android:src="@drawable/cover_default"
 
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,83 +101,88 @@
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/cover" />
+
                         <TextView
-                            android:textStyle="bold"
-                            android:textSize="25dp"
-                            android:gravity="center"
                             android:id="@+id/lblName"
-                            android:text="@{team.name}"
-                            app:layout_constraintTop_toBottomOf="@id/avatar"
-                            app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toRightOf="parent"
+                            android:layout_width="0dp"
                             android:layout_height="30dp"
-                            android:layout_width="0dp"></TextView>
-                        <LinearLayout
+                            android:gravity="center"
+                            android:text="@{team.name}"
+                            android:textSize="25dp"
+                            android:textStyle="bold"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            android:orientation="horizontal"
-                            android:layout_marginHorizontal="20dp"
-                            app:layout_constraintTop_toBottomOf="@id/lblName"
+                            app:layout_constraintTop_toBottomOf="@id/avatar"></TextView>
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="20dp"
+                            android:orientation="horizontal"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/lblName">
 
                             <TextView
-                                android:paddingHorizontal="10dp"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:drawableStart="@drawable/level_icon"
+                                android:paddingHorizontal="10dp"
                                 android:text="Basic"
                                 android:textStyle="bold"></TextView>
-                            <TextView
-                                android:paddingHorizontal="10dp"
-                                android:text="100"
-                                android:textStyle="bold"
-                                android:drawableStart="@drawable/reputation"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                ></TextView>
 
                             <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/reputation"
                                 android:paddingHorizontal="10dp"
+                                android:text="100"
+                                android:textStyle="bold"></TextView>
+
+                            <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:drawableStart="@drawable/rating_icon"
+                                android:paddingHorizontal="10dp"
                                 android:text="8.8"
                                 android:textStyle="bold"></TextView>
                         </LinearLayout>
 
 
-
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.cardview.widget.CardView>
+
                 <LinearLayout
-                    android:layout_gravity="center"
-                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
                     <Button
-                        android:paddingRight="20dp"
-                        android:paddingLeft="20dp"
-                        android:textColor="@color/white"
-                        android:background="@drawable/shape"
-                        android:text="Đặt sân"
-                        android:textAllCaps="false"
                         android:id="@+id/btnBooking"
                         android:layout_width="150dp"
-                        android:layout_height="wrap_content"></Button>
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/shape"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:text="Đặt sân"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"></Button>
                 </LinearLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:padding="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
                     <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:background="@color/white"
                         app:cardCornerRadius="10dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        app:layout_constraintTop_toTopOf="parent">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -228,23 +240,70 @@
                                 android:text="@{team.introduce}"
                                 android:textSize="16dp" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
+                            <LinearLayout
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Danh sách khung giờ"
-                                android:textSize="20dp"
-                                android:textStyle="bold" />
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="Danh sách khung giờ"
+                                    android:textSize="20dp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:id="@+id/timeMore"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Xem thêm"
+                                    android:textColor="@color/com_facebook_blue"
+                                    android:textSize="16dp" />
+
+                            </LinearLayout>
 
                             <androidx.recyclerview.widget.RecyclerView
 
-                                android:padding="10dp"
                                 android:id="@+id/recycleViewListPlayerVertical"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"/>
+                                android:layout_height="match_parent"
+                                android:padding="10dp" />
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="Danh sách trận đấu "
+                                    android:textSize="20dp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:id="@+id/matchMore"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Xem thêm"
+                                    android:textColor="@color/com_facebook_blue"
+                                    android:textSize="16dp" />
+
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+
+                                android:id="@+id/recycleViewListMatchVertical"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:padding="10dp" />
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"></TextView>
-
 
 
                         </LinearLayout>
@@ -254,17 +313,16 @@
         </ScrollView>
 
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:id="@+id/loading_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:visibility="gone"
-            android:id="@+id/loading_layout"
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="0dp">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <ProgressBar
                 android:layout_width="wrap_content"
