--- a/app/src/main/res/layout/item_evaluate_vertical.xml
+++ b/app/src/main/res/layout/item_evaluate_vertical.xml
@@ -14,14 +14,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:contentPadding="10dp"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
     app:cardCornerRadius="10dp"
    >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:src="@drawable/avatar_player_default"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/avatarPlayer"
@@ -39,13 +41,11 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="0dp"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+
                 <TextView
+                    android:paddingLeft="5dp"
                     android:layout_weight="1"
-                    android:textSize="20dp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     android:hint="name player"
                     android:text="@{evaluate.idPlayer.name}"
@@ -53,28 +53,28 @@
                     android:layout_height="wrap_content">
 
                 </TextView>
+
                 <RatingBar
-                    android:rating="@{evaluate.rating}"
-                    app:layout_constraintRight_toRightOf="parent"
                     android:id="@+id/rating_bar_small"
                     style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:isIndicator="false"
                     android:numStars="5"
+                    android:rating="@{evaluate.rating}"
+                    app:layout_constraintRight_toRightOf="parent"
+                    ></RatingBar>
 
-                    android:stepSize="0.5"></RatingBar>
-            </LinearLayout>
 
 
             <TextView
-                android:textSize="16dp"
+                android:paddingLeft="5dp"
+                android:textSize="14dp"
                 android:id="@+id/namePlayer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Comment "
                 android:text="@{evaluate.comment}"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/position"
                 app:layout_constraintLeft_toRightOf="@id/avatarPlayer"
                 app:layout_constraintTop_toTopOf="parent" />
