--- a/app/src/main/res/layout/item_player_horizontal.xml
+++ b/app/src/main/res/layout/item_player_horizontal.xml
@@ -24,13 +24,14 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:src="@drawable/avatar_player_default"
                 android:id="@+id/avatarPlayer"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/avatar_player_default" />
+              />
 
             <TextView
                 android:id="@+id/namePlayer"
